--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,46 @@
-.DS_Store
-node_modules/
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# compiled output
 /dist
-.nyc_output/
-coverage/
-package-lock.json
+/tmp
+/out-tsc
+# Only exists if Bazel was run
+/bazel-out
 
-/tests/e2e/videos/
-/tests/e2e/screenshots/
+# dependencies
+/node_modules
 
-# local env files
-.env.local
-.env.*.local
+# profiling files
+chrome-profiler-events.json
+speed-measure-plugin.json
 
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
 
-# functions ignore
-functions/node_modules/
-functions/package-lock.json
-functions/etc
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
